--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/nazhduck/hexlet-js#readme",
   "dependencies": {
+    "commander": "^11.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
